@@ -2,6 +2,7 @@ package de.melanx.utilitix.content.crudefurnace;
 
 import net.minecraft.core.RegistryAccess;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.item.crafting.RecipeManager;
 import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.item.crafting.SmeltingRecipe;
@@ -14,26 +15,30 @@ public class CrudeFurnaceRecipeHelper {
 
     @Nullable
     public static ModifiedRecipe getResult(Level level, ItemStack input) {
+        return CrudeFurnaceRecipeHelper.getResult(level.getRecipeManager(), level.registryAccess(), input);
+    }
+
+    @Nullable
+    public static ModifiedRecipe getResult(RecipeManager recipeManager, RegistryAccess registryAccess, ItemStack input) {
         if (input.isEmpty()) {
             return null;
         }
 
-        RecipeManager rm = level.getRecipeManager();
-        SmeltingRecipe recipe = rm.getAllRecipesFor(RecipeType.SMELTING).stream()
-                .filter(r -> r.getIngredients().get(0).test(input))
+        RecipeHolder<SmeltingRecipe> recipe = recipeManager.getAllRecipesFor(RecipeType.SMELTING).stream()
+                .filter(r -> r.value().getIngredients().getFirst().test(input))
                 .findFirst().orElse(null);
 
         if (recipe == null) {
             return null;
         }
 
-        if (RecipeHelper.isItemValidInput(rm, RecipeType.BLASTING, input)
-                || RecipeHelper.isItemValidInput(rm, RecipeType.SMOKING, input)) {
+        if (RecipeHelper.isItemValidInput(recipeManager, RecipeType.BLASTING, input)
+                || RecipeHelper.isItemValidInput(recipeManager, RecipeType.SMOKING, input)) {
             // Recipe already has a special type of furnace
             return null;
-        } else {
-            return new ModifiedRecipe(level.registryAccess(), recipe);
         }
+
+        return new ModifiedRecipe(registryAccess, recipe);
     }
 
     public static class ModifiedRecipe {
@@ -41,13 +46,14 @@ public class CrudeFurnaceRecipeHelper {
         private final float xp;
         private final int burnTime;
         private final ItemStack output;
-        private final SmeltingRecipe originalRecipe;
+        private final RecipeHolder<SmeltingRecipe> originalRecipe;
 
-        ModifiedRecipe(RegistryAccess registryAccess, SmeltingRecipe recipe) {
+        ModifiedRecipe(RegistryAccess registryAccess, RecipeHolder<SmeltingRecipe> recipeHolder) {
+            SmeltingRecipe recipe = recipeHolder.value();
             this.xp = recipe.getExperience() / 2;
             this.burnTime = recipe.getCookingTime() / 2;
             this.output = recipe.getResultItem(registryAccess);
-            this.originalRecipe = recipe;
+            this.originalRecipe = recipeHolder;
         }
 
         public float getXp() {
@@ -62,7 +68,7 @@ public class CrudeFurnaceRecipeHelper {
             return this.output;
         }
 
-        public SmeltingRecipe getOriginalRecipe() {
+        public RecipeHolder<SmeltingRecipe> getRecipeHolder() {
             return this.originalRecipe;
         }
     }
